--- a/fonts.css
+++ b/fonts.css
@@ -1,4 +1,10 @@
 @font-face {
+   font-family: "Century";
+   src: url("fonts/Century.eot") format("embedded-opentype"), url("fonts/Century.TTF") format("truetype"), url("fonts/Century.woff") format("woff"), url("fonts/Century.svg") format("svg");
+   font-weight: normal;
+   font-style: normal;
+}
+@font-face {
    font-family: "Calibri";
    src: url("fonts/Calibri.eot") format("embedded-opentype"), url("fonts/Calibri.ttf") format("truetype"), url("fonts/Calibri.woff") format("woff"), url("fonts/Calibri.svg") format("svg");
    font-weight: normal;
